--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emoji</title>
     <link  rel="stylesheet"  href="css/main.css">
+    <link  rel="stylesheet"  href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+
 </head>
 <body>
 
@@ -14,7 +16,7 @@
  </head>
  <main>
      <div class="container">
-        <ul>
+        <ul id="emoji">
             <li></li>
             <li></li>
             <li></li>
@@ -35,4 +37,5 @@
 
     
 </body>
+<script src="js/main.js"></script>
 </html>
