--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emoji</title>
-    <link  rel="stylesheet"  href="css/main.css">
-    <link  rel="stylesheet"  href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Emoji</title>
+        <link  rel="stylesheet"  href="main.css">
+        <link  rel="stylesheet"  href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+    </head>
+    <body>
+        <head>
+            <h1>Memoji</h1>
+        </head>
+        <main>
+            <section>
+                <div class="container">
+                    <ul id="emoji">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <div class="timer"></div>
+                </div>
+            <section>
+        </main>
+    </body>
 
-</head>
-<body>
-
- <head>
-     <h1>Memoji</h1>
- </head>
- <main>
-     <div class="container">
-        <ul id="emoji">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-     </div>
-
-
- </main>
-
-    
-</body>
-<script src="js/main.js"></script>
+    <script src="main.js"></script>
+    <script>
+        const memoji = new Memoji({
+            fieldId: 'emoji',
+            fieldTimer: 'timer',
+            gameTime: '60',
+    });
+    </script>
 </html>
